紹介記事に合うよう微修正

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="sample2">%1$sが%2$d個ある</string>
 
     <string name="sample3">レイアウトファイルから</string>
-    <string name="sample4"><u>リッチテキスト</u>が使えます</string>
+    <string name="sample4"><u>HTMLマークアップ</u>が使えます</string>
 
     <string name="sample5">早口言葉</string>
     <string name="sample6">なまむぎなまごめなまたまご</string>
